objects/Referral_Reporting__c.object
<CustomObject>
    <label>Referral Reporting</label>
    <nameField>
        <displayFormat>RR-{0}</displayFormat>
        <label>Referral Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Referral Reporting</relationshipLabel>
        <relationshipName>Referral_Reporting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Referrals__c</fullName>
        <formula>iF( ISPICKVAL( Metric_Type__c , &apos;Referral&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Type__c</fullName>
        <label>Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Activity</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Admit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_Ins_Admits__c</fullName>
        <formula>IF( ISPICKVAL( Metric_Type__c , &apos;Admit&apos; ) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Ins/Admits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral Reporting</relationshipLabel>
        <relationshipName>Referral_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral Reporting (Referral Contact)</relationshipLabel>
        <relationshipName>Referral_Reporting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Referral</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Referral Reporting</relationshipLabel>
        <relationshipName>Referral_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Activities__c</fullName>
        <formula>IF(NOT( ISBLANK( Outreach_Activity_Type__c ) ) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MySolutions_Referral__c</fullName>
        <formula>Related_Referral__r.RecordType.DeveloperName = &apos;MySolutions&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MySolutions Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Activity_Type__c</fullName>
        <label>Outreach Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Organization__c</fullName>
        <formula>if ( ISBLANK(Related_Referral__r.HealthCloudGA__ReferringOrganization__c ),
   Referral_Contact__r.Account.Name , Related_Referral__r.HealthCloudGA__ReferredToOrganization__r.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Living_Referral__c</fullName>
        <formula>Related_Referral__r.RecordType.DeveloperName = &apos;Senior_Living&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Living Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adult_Day_Club_Referral__c</fullName>
        <formula>Related_Referral__r.RecordType.DeveloperName = &apos;Adult_Day_Club&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adult Day Club Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skilled_Nursing_Referral__c</fullName>
        <formula>Related_Referral__r.RecordType.DeveloperName = &apos;Skilled_Nursing&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skilled Nursing Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Moved_In_Admitted__c</fullName>
        <formula>IF(Referrals__c = 1 &amp;&amp; NOT(ISBLANK(Related_Referral__r.Move_In_Date__c )), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Moved In\Admitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>